--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       Kageneko Edits
     <nav class="level">
       <p class="level-item has-text-centered">
-        <a class="link is-info">ホーム</a href="/home">
+        <a class="link is-info">ホーム</a href="https://www.kageneko643.ml">
       </p>
       <p class="level-item has-text-centered">
-        <a class="link is-info">自己紹介-About Me</a>
+        <a class="link is-info">自己紹介-About Me</a href="/about me.html">
       </p>
       </p>
       <p class="level-item has-text-centered">
