--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="link is-info">ホーム</a href="https://www.kageneko643.ml">
       </p>
       <p class="level-item has-text-centered">
-        <a class="link is-info">自己紹介-About Me</a href="https://www.kageneko643.ml/about me.html">
+        <a class="link is-info">自己紹介-About Me</a href="https://www.kageneko643.ml/about me">
       </p>
       </p>
       <p class="level-item has-text-centered">
