--- a/index.html
+++ b/index.html
@@ -113,6 +113,24 @@
                     <button class="button is-danger is-rounded">影猫の歴史をみる</button>
               </h1>
               <center>
+    <font size="10">
+      <center>
+        <h1>
+          <font color=#FF3366>
+
+            <br>
+            <br>
+        </h1>
+        これからも、変化していきます。
+        <center>
+
+          </div>
+          </div>
+          </div>
+          </div>
+</body>
+<br>
+<br>
 
                 </div>
                 </div>
