--- a/index.html
+++ b/index.html
@@ -114,10 +114,21 @@
               </h1>
               <center>
     <font size="10">
+      
+      <center>
+        <h1>
+          <font color=#FF3366>
+      </tr>
+    </table>
+    <br>
+    <br>
+    <font size="10">
       <center>
         <h1>
           <font color=#FF3366>
 
+            <br>
+            <br>
             <br>
             <br>
         </h1>
