--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     </table>
     <br>
     <br>
+        
     <font size="10">
       <center>
         <h1>
@@ -132,6 +133,25 @@
             <br>
             <br>
         </h1>
+            <table border="1">
+    <TABLE BORDER="1" style="font-size: 9pt; line-height: 200%; ">
+
+      <tr>
+        <th>年代</th>
+        <th>できごと</th>
+      </tr>
+      <tr>
+        <td>2017</td>
+        <td>動画編集ソフトFimoraで初めて動画編集に触る。当時のFimoraはあまりできることが少なかったため、動画編集の道を断念</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>プログラミングの道に進む。プログラミングではPythonを主に扱う。raspberry pyなどで自宅ファイルサーバーなどを作った。</td>
+      </tr>
+      <td>2019</td>
+      <td>iMacを購入、今までWindowsだったが、Macを触ることを決意。そこではXcodeやswiftを学習。特にMac向けのアプリを作っていた。また、Final Cut Proを使用し、趣味程度の動画編集をしていた。</td>
+      </tr>
+
         これからも、変化していきます。
         <center>
 
