--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
       <td>2019</td>
       <td>iMacを購入、今までWindowsだったが、Macを触ることを決意。そこではXcodeやswiftを学習。特にMac向けのアプリを作っていた。また、Final Cut Proを使用し、趣味程度の動画編集をしていた。</td>
       </tr>
+      <td>2021</td>
+      <td>レガシータイトル目的にAdobe Premiere ProとAE(After Effect)を使用し、本格的な動画編集をしたが、2021年前にはレガシータイトルが今後使えなくなることが判明、Adobe製品を使用するのをやめることにした。</td>
+      </tr>
+      <td>2022</td>
+      <td>現在は、Adobe PremiereでできることはAviutlでやることが多くなり、基本Aviutlを使っての動画編集をすることになった。また現在は、プログラミングをすることになり、Javascript,Html,Cssを勉強中。不適切な会話を検知するDiscord Botなどを作成しています。</td>
+      <br>
+      <br>
       <center>
         <h1>
           <font color=#FF3366>
