--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
     <font size="10">
            <table border="1">
     <TABLE BORDER="1" style="font-size: 15pt; line-height: 200%; ">
-
       <tr>
         <th>年代</th>
         <th>できごと</th>
@@ -146,6 +145,7 @@
     </table>
     <br>
     <br>
+        <center>
         
     <font size="10">
       <center>
