--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <button class="button is-danger is-rounded">影猫の歴史をみる</button>
               </h1>
               <center>
-    <div style="padding: 15px; background: #999">
+    <div style="padding: 400px; ">
     <font size="10">
            <table border="1">
     <TABLE BORDER="1" style="font-size: 15pt; line-height: 200%; ">
