--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </p>
     <p class="subtitle">
       Kageneko Edits
+      <p class="subtitle">
+      このページの内容
     <nav class="level">
       <p class="level-item has-text-centered">
         <a class="link is-info">ホーム</a href="https://www.kageneko643.ml">
